[project]
dependencies = [
    "Cython",
    "about-time",
    "absl-py",
    "aeon",
    "alive-progress",
    "altair",
    "anyio",
    "appdirs",
    "appnope",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "autograd",
    "Babel",
    "beautifulsoup4",
    "bleach",
    "blinker",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "clarabel",
    "click",
    "cloudpickle",
    "cma",
    "comm",
    "contourpy",
    "cvxpy",
    "cycler",
    "Cython",
    "dask",
    "debugpy",
    "decorator",
    "defusedxml",
    "Deprecated",
    "dill",
    "distributed",
    "docker-pycreds",
    "ecos",
    "exceptiongroup",
    "executing",
    "Farama-Notifications",
    "fastjsonschema",
    "filelock",
    "fire",
    "fonttools",
    "fqdn",
    "fsspec",
    "future",
    "gitdb",
    "GitPython",
    "google-auth",
    "google-auth-oauthlib",
    "grapheme",
    "grpcio",
    "gym",
    "gym-notices",
    "gymnasium",
    "idna",
    "imageio",
    "imageio-ffmpeg",
    "importlib-metadata",
    "importlib-resources",
    "install",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "isoduration",
    "jedi",
    "Jinja2",
    "joblib",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-console",
    "jupyter-events",
    "jupyter-lsp",
    "jupyter_client",
    "jupyter_core",
    "jupyter_server",
    "jupyter_server_terminals",
    "jupyterlab",
    "jupyterlab-widgets",
    "jupyterlab_pygments",
    "jupyterlab_server",
    "kiwisolver",
    "llvmlite",
    "locket",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "mistune",
    "mo-gymnasium",
    "moviepy",
    "mpmath",
    "msgpack",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "notebook",
    "notebook_shim",
    "numba",
    "numpy",
    "oauthlib",
    "osqp",
    "overrides",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "partd",
    "patsy",
    "pexpect",
    "Pillow",
    "platformdirs",
    "plotly",
    "proglog",
    "prometheus-client",
    "prompt-toolkit",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pyasn1",
    "pyasn1-modules",
    "pybind11",
    "pycparser",
    "pydeck",
    "pygame",
    "Pygments",
    "pymoo",
    "pyparsing",
    "python-cdd",
    "python-dateutil",
    "python-json-logger",
    "pytz",
    "PyYAML",
    "pyzmq",
    "qdldl",
    "qtconsole",
    "QtPy",
    "referencing",
    "requests",
    "requests-oauthlib",
    "rfc3339-validator",
    "rfc3986-validator",
    "rich",
    "rpds-py",
    "rsa",
    "sb3-contrib",
    "scikit-learn",
    "scipy",
    "scs",
    "seaborn",
    "Send2Trash",
    "sentry-sdk",
    "setproctitle",
    "Shimmy",
    "six",
    "smmap",
    "sniffio",
    "sortedcontainers",
    "soupsieve",
    "stable-baselines3",
    "stack-data",
    "statsmodels",
    "streamlit",
    "stumpy",
    "sympy",
    "tblib",
    "tenacity",
    "tensorboard",
    "tensorboard-data-server",
    "termcolor",
    "terminado",
    "threadpoolctl",
    "tinycss2",
    "toml",
    "tomli",
    "toolz",
    "torch",
    "tornado",
    "tqdm",
    "traitlets",
    "tsfresh",
    "types-python-dateutil",
    "typing_extensions",
    "tzdata",
    "uri-template",
    "urllib3",
    "wandb",
    "watchdog",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "Werkzeug",
    "widgetsnbextension",
    "wrapt",
    "zict",
    "zipp",
    "<packagename>@git+https://github.com/jqmviegas/jqm_cvi.git",
]